--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,12 @@
 *.xlsx binary
 *.xlsm binary
 *.pdf binary
+
+*.pbix filter=lfs diff=lfs merge=lfs -text
+*.xlsx filter=lfs diff=lfs merge=lfs -text
+*.csv  filter=lfs diff=lfs merge=lfs -text
+*.parquet filter=lfs diff=lfs merge=lfs -text
+
+*.yml text eol=lf
+*.yaml text eol=lf
+*.md  text eol=lf
